--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,43 @@
-torch==1.10.2+cu113
-torchvision==0.11.3+cu113
+appdirs==1.4.4
+asttokens==2.2.1
+backcall==0.2.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.6
+decorator==5.1.1
+docker-pycreds==0.4.0
+executing==1.2.0
+gitdb==4.0.10
+GitPython==3.1.32
+idna==3.4
+ipython==8.14.0
+jedi==0.19.0
+matplotlib-inline==0.1.6
+numpy==1.25.2
+parso==0.8.3
+pathtools==0.1.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==10.0.0
+prompt-toolkit==3.0.39
+protobuf==4.23.4
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.15.1
+PyYAML==6.0.1
+requests==2.31.0
+sentry-sdk==1.29.2
+setproctitle==1.3.2
+six==1.16.0
+smmap==5.0.0
+stack-data==0.6.2
 timm==0.6.5
+torch==1.10.1+cu111
+torchaudio==0.10.1+cu111
+torchvision==0.11.2+cu111
+traitlets==5.9.0
+typing_extensions==4.7.1
+urllib3==2.0.4
+wandb==0.15.8
+wcwidth==0.2.6
